tmux: open windows next to current

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,14 +15,13 @@ unbind %
 unbind '"'
 bind - split-window -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
-bind C new-window -c "#{pane_current_path}"
 
 # panes and windows keyboard shorcuts
 bind -n M-- split-window -c "#{pane_current_path}"
 bind -n M-_ split-window -p '20' -c "#{pane_current_path}"
 bind -n M-\\ split-window -h -c "#{pane_current_path}"
-bind -n M-c new-window 
-bind -n M-C new-window -c "#{pane_current_path}"
+bind -n M-c new-window -a
+bind -n M-C new-window -ac "#{pane_current_path}"
 # bind -n M-x kill-pane
 bind -n M-X kill-window
 bind -n M-z resize-pane -Z
