--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,8 +22,6 @@ bind -n M-_ split-window -p '20' -c "#{pane_current_path}"
 bind -n M-\\ split-window -h -c "#{pane_current_path}"
 bind -n M-c new-window -a
 bind -n M-C new-window -ac "#{pane_current_path}"
-# bind -n M-x kill-pane
-bind -n M-X kill-window
 bind -n M-z resize-pane -Z
 
 bind -n M-n next-window
@@ -32,9 +30,6 @@ bind -n M-p previous-window
 # lazygit popup
 bind g display-popup -d "#{pane_current_path}" -xC -yC -w90% -h90% -E "lazygit" 
 bind -n M-g display-popup -d "#{pane_current_path}" -xC -yC -w90% -h90% -E "lazygit" 
-
-# set vi-mode
-set-window-option -g mode-keys vi
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -50,6 +45,10 @@ bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
 bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+bind-key -n 'M-Up' if-shell "$is_vim" 'send-keys M-Up'       'resize-pane -U 2'
+bind-key -n 'M-Down' if-shell "$is_vim" 'send-keys M-Down'   'resize-pane -D 2'
+bind-key -n 'M-Left' if-shell "$is_vim" 'send-keys M-Left'   'resize-pane -L 3'
+bind-key -n 'M-Right' if-shell "$is_vim" 'send-keys M-Right' 'resize-pane -R 3'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
@@ -61,6 +60,17 @@ bind-key -T copy-mode-vi 'M-j' select-pane -D
 bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
 bind-key -T copy-mode-vi 'M-\' select-pane -l
+
+# set vi-mode
+set-window-option -g mode-keys vi
+# copy mode bindings
+bind -n M-m copy-mode
+bind -n 'C-q' if-shell "$is_vim" 'send-keys C-q' 'copy-mode'
+bind -T copy-mode-vi C-q send-keys -X -N 3 scroll-up
+bind -T copy-mode-vi C-e send-keys -X -N 3 scroll-down
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi M-m send -X cancel
+bind -T copy-mode-vi C-[ send -X cancel
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
