tmux: kill other panes bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,11 @@ bind -n M-z resize-pane -Z
 bind -n M-n next-window
 bind -n M-p previous-window
 
+# kill other panes
+unbind o
+bind o kill-pane -a
+bind -n M-o kill-pane -a
+
 # lazygit popup
 bind g display-popup -d "#{pane_current_path}" -xC -yC -w90% -h90% -E "lazygit" 
 bind -n M-g display-popup -d "#{pane_current_path}" -xC -yC -w90% -h90% -E "lazygit" 
