--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -13,6 +13,11 @@ use = "ndtoan96/ouch"
 rev = "2496cd9"
 hash = "5b9dea47776a30946cfbf83232d18fb1"
 
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "864a021"
+hash = "e0ada736ea676c2bbb3ec705a49526ef"
+
 [[flavor.deps]]
 use = "BennyOe/tokyo-night"
 rev = "695dac6"
