--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -17,3 +17,13 @@ prepend_previewers = [
   { mime = "application/x-xz",            run = "ouch" },
 	{ mime = "application/xz",              run = "ouch" },
 ]
+
+[[plugin.prepend_fetchers]]
+id   = "git"
+name = "*"
+run  = "git"
+
+[[plugin.prepend_fetchers]]
+id   = "git"
+name = "*/"
+run  = "git"
