--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -21,3 +21,7 @@ run = "seek -5"
 [[manager.prepend_keymap]]
 on = "t" 
 run = "plugin augment-command -- tab_create"
+[[input.prepend_keymap]]
+on   = "<Esc>"
+run  = "close"
+desc = "Cancel input"
