tmux: move window bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,8 @@ bind -n M-z resize-pane -Z
 
 bind -n M-n next-window
 bind -n M-p previous-window
+bind p swap-window -t -1 \; previous-window 
+bind n swap-window -t +1 \; next-window
 
 # kill other panes
 unbind o
