--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set -sg escape-time 50
 set -ag terminal-overrides ",$TERM:RGB"
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
