--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ bind \\ split-window -h -c "#{pane_current_path}"
 
 # panes and windows keyboard shorcuts
 bind -n M-- split-window -c "#{pane_current_path}"
-bind -n M-_ split-window -l '20%' -c "#{pane_current_path}"
+bind -n M-= split-window -l '20%' -c "#{pane_current_path}"
 bind -n M-\\ split-window -h -c "#{pane_current_path}"
 bind -n M-c new-window -a
 bind -n M-C new-window -ac "#{pane_current_path}"
