yazi: add kwave for audio preview

--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -5,7 +5,14 @@ edit = [
 image = [
   {run = 'nomacs "$@"'}
   ]
+kwave = [
+  { run = 'kwave "$@"', desc = "Kwave" },
+]
 
+[open]
+prepend_rules = [
+  { mime = "audio/*", use = "kwave" },
+]
 
 [mgr]
 show_hidden=true
@@ -26,3 +33,4 @@ prepend_previewers = [
 id   = "git"
 name = "*/"
 run  = "git"
+
